# telemetry-overlay

./: .gitignore  .gitmodules  .qmlls.ini  CMakeLists.txt  CpuUsage.qml  GraphHeading.qml  Main.qml  MemoryUsage.qml  datamanager.cpp  datamanager.h  historybuffer.cpp  historybuffer.h  main.cpp  procdata.cpp  procdata.h  test_errors.cpp
.github/workflows/: DesktopRelease.yml
headers/: datamanager.hpp  procdatasource.hpp
qml/: CommonGraph.qml  CpuUsage.qml  Main.qml  MemoryUsage.qml
src/: datamanager.cpp  procdatasource.cpp
